--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { 
+   height: 100%; 
+   background: rgb(251,225,255);
+   background: linear-gradient(90deg, rgba(251,225,255,1) 0%, rgba(208,224,255,1) 47%, rgba(233,217,250,1) 100%);
+}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
