criado o interceptor TokenInterceptor

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -40,7 +40,7 @@
                   </div>
                </form>
 
-               <a href="#" (click)="prepararCadastro()" *ngIf="!cadastrando"
+               <a href="#" (click)="prepararCadastro($event)" *ngIf="!cadastrando"
                      class="my-2">
                   Não possui conta? Inscreva-se!</a>
             </mat-card-content>
