--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
 
+:root {
+   --tarefas-bg-color: #9c88d3;
+}
+
 html, body { 
    height: 100%; 
    background: rgb(251,225,255);
    background: linear-gradient(90deg, rgba(251,225,255,1) 0%, rgba(208,224,255,1) 47%, rgba(233,217,250,1) 100%);
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+::-webkit-scrollbar {
+   background: transparent;
+   width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+   background-color: rgb(121, 120, 120);
+   border-radius: 10px;
+   max-height: 100px;
+}
+
+::-webkit-scrollbar-track {
+   background: transparent;
+}
+
+::-webkit-scrollbar-track-piece:start {
+   background: transparent;
+   margin-top: 10px; 
+}
+
+::-webkit-scrollbar-track-piece:end {
+   background: transparent;
+   margin-bottom: 10px; 
+}
