--- a/src/app/tarefas/tarefas.component.css
+++ b/src/app/tarefas/tarefas.component.css
@@ -3,7 +3,7 @@ header {
    top: 0;
    left: 0;
    z-index: 9999;
-   padding: 30px 0 10px 30px;
+   padding: 30px 30px 10px;
    background-color: var(--tarefas-bg-color);
 }
 main {
