--- a/src/app/lista-de-tarefas/header/header.component.html
+++ b/src/app/lista-de-tarefas/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex">
-   <h1 class="flex-grow-1" *ngIf="!editando" >
+   <h1 class="flex-grow-1 fw-bolder" *ngIf="!editando" >
       {{ lista.nome }}
    </h1>
    <div class="flex-grow-1">
@@ -15,7 +15,8 @@
          </button>
       </form>
    </div>
-   <button mat-icon-button [matMenuTriggerFor]="menu">
+   <button mat-icon-button [matMenuTriggerFor]="menu"
+         matTooltip="Opções de lista" >
       <mat-icon>more_vert</mat-icon>
    </button>
 </div>
