--- a/src/app/lista-de-tarefas/lista-de-tarefas.component.css
+++ b/src/app/lista-de-tarefas/lista-de-tarefas.component.css
@@ -7,11 +7,12 @@ footer {
    position: sticky;
    bottom: 0;
    left: 0;
-   background-color: #fff;
+   background-color: #feffff;
 }
 
 footer form {
    padding:0 10px 10px;
+   font-size: 17px;
 }
 
 
